# Iot_GateWay_Aws_Cpp

./: CMakeLists.txt  README.md  aws_iot_mqtt_wrapper.cpp  main.cpp
include/: aws_iot_mqtt_wrapper.h  backoff_manager.h  logger.hpp
